Fix: Updated vercel.json to correctly serve static assets

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "rewrites": [
+    { "source": "/static/(.*)", "destination": "/static/$1" },
+    { "source": "/_next/static/(.*)", "destination": "/_next/static/$1" },
+    { "source": "/(.*\\..*)", "destination": "/$1" },  
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
